# andOTP-decrypt

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  andotp-decrypt.py  andotp_decrypt.py  generate_code.py  generate_qr_codes.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
testdata/: accounts_issuer_123456.json.aes  accounts_new_123456.json.aes  accounts_old_123456.json.aes  garbage.json.aes  test.sh
tests/: test_andotp.py
