[tool.poetry]
name = "andotp-decrypt"
version = "0.1.0"
description = "A backup decryptor for the andOTP Android app"
authors = ["asmw <asmw@asmw.org>"]
license = "MIT"

[tool.poetry.scripts]
andotp_decrypt = 'andotp_decrypt:main'
andotp_gencode = 'generate_code:main'
andotp_qrcode = 'generate_qr_codes:main'

[tool.poetry.dependencies]
python = "^3.7"
pyotp = "^2.3.0"
pycryptodome = "^3.9.4"
docopt = "^0.6.2"
pillow = "^7.0.0"
pyqrcode = "^1.2.1"

[tool.poetry.dev-dependencies]
rope = "^0.14.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
